--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,13 @@ input {
     height: 45px;
 }
 
+.logo {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+    width: 250px;
+}
+
 form .submit {
     background: #ff5722;
     border-color:transparent;
@@ -75,7 +82,8 @@ form .submit {
     font-weight: bold;
     letter-spacing: 2px;
     height: 50px;
-    margin-top: 2opx;
+    margin-top: 20px;
+    margin: 5px auto;
 }
 
 form .submit:hover {
@@ -93,3 +101,26 @@ input:focus:invalid {
     border: red 3px solid;
 }
 
+.container {
+    position: relative;
+    display: block;
+}
+
+div {
+    display: block;
+}
+
+.navbar {
+    justify-content: space-between;
+}
+.flex-item {
+    padding: 5px;
+    width: 60px;
+    height: 50px;
+    margin: 5px;
+    line-height: 50px;
+    color: rgb(20, 80, 5);
+    font-weight: bold;
+    font-size: 2em;
+    text-align: center;
+  }
